# decs

./: Cargo.toml  README.md  architecture.md
.github/workflows/: ci.yml
benches/: none_queries.rs  rollback.rs
decs_macros/: Cargo.toml
decs_macros/src/: lib.rs
src/: arena.rs  component.rs  ecs.rs  entity.rs  frame.rs  hierarchy.rs  lib.rs  pool.rs  rollback.rs  scheduler.rs  storage.rs  system.rs  tick.rs  view.rs  world.rs
tests/: arena_tests.rs  cleanup_systems.rs  component_cleanup_system.rs  component_tests.rs  debug_alloc_logs.rs  derive_component.rs  entity_spawn.rs  hierarchy_integration.rs  hierarchy_set_parent.rs  none_all_changed_filters.rs  none_query_filtered_position.rs  page_chunk_invariants.rs  rollback_branch_coverage.rs  rollback_semantics.rs  rollback_tests.rs  scheduler_groups.rs  scheduler_order.rs  scheduler_order_more.rs  scheduler_order_tests.rs  storage_set_remove_masks.rs  storage_tests.rs  system_match_counts.rs  test_rollback_viewmut.rs  test_system_macro.rs  view_mut_semantics.rs  world_architecture_spec.rs  world_rollback_cases.rs
