[package]
name = "decs"
version = "0.1.0"
edition = "2024"

[dependencies]
decs_macros = { path = "decs_macros" }


[dev-dependencies]
criterion = "0.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
wasm-bindgen = "0.2"

[[bench]]
name = "none_queries"
harness = false

[[bench]]
name = "rollback"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

